Fix alignment of game objects

--- a/src/ooga/view/resources/main.css
+++ b/src/ooga/view/resources/main.css
@@ -491,3 +491,10 @@ TabPane {
 .tab:selected  {
  -fx-background-color: -secondary-color
 }
+
+.object-view {
+	-fx-alignment: BASELINE-LEFT;
+	-fx-background-color: green;
+}
+
+
